# insight-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_simple.py
config/: routing.yaml
config/personas/: default_personas.json
docs/releases/: v0.1.0.md
docs/src/: Add_requirements.md  implementation_checklist.md  implementation_spec.md  insight-agent_requirements_summary.md  interfaces.md  output_schema_v2.json  reasoning_policy.md  requirements.md  routing_plan JSON Schema.md  routing_requirements.md  routing_spec.md
examples/: runtime.example.yaml  sample_request.json
insight_core/: __init__.py  cli.py  consolidator.py  discovery.py  evaluator.py  extractor.py  llm_client.py  persona_registry.py  pipeline.py  request_loader.py  request_normalizer.py  response_builder.py  result_formatter.py  runner.py  runtime_config.py  schemas.py  source_loader.py  summarizer.py  unitizer.py
insight_core/router/: __init__.py  config.py  density_estimator.py  fallback.py  lead_persona.py  validator.py
scripts/manual/: test_run.py  test_simple.py
skills/claude/: SKILL.md
skills/codex/: SKILL.md
tests/: test_cli_pdf.py  test_insight_agent.py  test_llm_openrouter.py  test_performance_refactor.py  test_response_builder.py  test_result_formatter.py  test_router.py  test_runner.py  test_runtime_config.py  test_source_loader.py
